--- a/Wildfire_address_verification.ipynb
+++ b/Wildfire_address_verification.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyMKGeLXMHpuosCKlFNc7DHX",
       "include_colab_link": true
     },
     "kernelspec": {
