--- a/Wildfire_address_verification.ipynb
+++ b/Wildfire_address_verification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKGeLXMHpuosCKlFNc7DHX",
+      "authorship_tag": "ABX9TyMraH6LibpX71BeXuy9ESSp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         "    maxar_layer=TileLayer(url=maxar_lahaina_tiles, name='Maxar post-fire August 9')\n",
         "    m.add_layer(maxar_layer)\n",
         "\n",
-        "    skysat_lahaina_tiles = (\"https://storms.ngs.noaa.gov/storms/2023_hawaii/index.html#18.32/20.883391/-156.677792\")\n",
+        "    skysat_lahaina_tiles = (\"https://geospatialvisualizer.z13.web.core.windows.net/tiles/skysat_maui_8_10_2023_rgb_tiles/{z}/{x}/{y}.png\")\n",
         "    skysat_layer=TileLayer(url=skysat_lahaina_tiles, name='SkySat post-fire August 9')\n",
         "    m.add_layer(skysat_layer)\n",
         "\n",
